[package]
name = "luaagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.8", features = ["lua54", "vendored", "async", "serialize"] }
rust-embed = {version="6.6.1", features=["interpolate-folder-path"]}
serde_json = "1.0"
rand = "0.8.4"

[profile.release]
#strip = true
